--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <div class="welcome-screen">
-    <h1>☕ Welcome to Smart Coffee Shop ☕</h1>
+    <h1>☕ Welcome to Naweeda's Smart Coffee Shop ☕</h1>
     <img src="https://plus.unsplash.com/premium_photo-1673545518947-ddf3240090b1?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NXx8Y29mZmVlfGVufDB8fDB8fHww" alt="Coffee Cup">
     <p>Preparing your smart assistant...</p>
   </div>
